Update AppConstant.java